--- a/Azmoonak/Views/Exam/EndExam.cshtml
+++ b/Azmoonak/Views/Exam/EndExam.cshtml
@@ -6,6 +6,7 @@
     Layout = "~/Views/Shared/_ExamLayout.cshtml";
 }
 
+
 <div class="app container-fluid bg-dager text-black">
     <div class="row">
 
@@ -59,7 +60,7 @@
                                         if (question.ElementAt(i).UserAn == question.ElementAt(i).CorrectAn)
                                         {
                                             <td>@Qnum</td>
-                                            <td><i class="fa fa-check-circle text-success fa-lg check"></i></td>
+                                            <td><i class="fa fa-check-circle text-success fa-lg check" style="margin-left:12px;"></i></td>
                                             <td><i class="fa fa-circle-o fa-lg"></i></td>
                                             <td><i class="fa fa-circle-o fa-lg"></i></td>
                                             <td><i class="fa fa-circle-o fa-lg"></i></td>
@@ -70,39 +71,42 @@
                                             if (question.ElementAt(i).CorrectAn == question.ElementAt(i).AnTwo)
                                             {
                                                 <td>@Qnum</td>
-                                                <td><i class="fa fa-times-circle-o text-danger fa-lg check"></i></td>
-                                                <td><i class="fa fa-check-circle-o text-success fa-lg check"></i></td>
+                                                <td><i class="fa fa-times-circle-o text-danger fa-lg check" style="margin-left:12px;"></i></td>
+                                                <td><i class="fa fa-check-circle-o text-success fa-lg check" style="margin-left:12px;"></i></td>
                                                 <td><i class="fa fa-circle-o fa-lg"></i></td>
                                                 <td><i class="fa fa-circle-o fa-lg"></i></td>
                                             }
                                             if (question.ElementAt(i).CorrectAn == question.ElementAt(i).AnThree)
                                             {
                                                 <td>@Qnum</td>
-                                                <td><i class="fa fa-times-circle-o text-danger fa-lg check"></i></td>
+                                                <td><i class="fa fa-times-circle-o text-danger fa-lg check" style="margin-left:12px;"></i></td>
                                                 <td><i class="fa fa-circle-o fa-lg"></i></td>
-                                                <td><i class="fa fa-check-circle-o text-success fa-lg check"></i></td>
+                                                <td><i class="fa fa-check-circle-o text-success fa-lg check" style="margin-left:12px;"></i></td>
                                                 <td><i class="fa fa-circle-o fa-lg"></i></td>
                                             }
                                             if (question.ElementAt(i).CorrectAn == question.ElementAt(i).AnFour)
                                             {
                                                 <td>@Qnum</td>
-                                                <td><i class="fa fa-times-circle-o text-danger fa-lg check"></i></td>
+                                                <td><i class="fa fa-times-circle-o text-danger fa-lg check" style="margin-left:12px;"></i></td>
                                                 <td><i class="fa fa-circle-o fa-lg"></i></td>
                                                 <td><i class="fa fa-circle-o fa-lg"></i></td>
-                                                <td><i class="fa fa-check-circle-o text-success fa-lg check"></i></td>
+                                                <td><i class="fa fa-check-circle-o text-success fa-lg check" style="margin-left:12px;"></i></td>
                                             }
 
                                             Qnum++;
                                         }
 
                                     }
+
+
+
                                     if (question.ElementAt(i).UserAn == question.ElementAt(i).AnTwo)
                                     {
                                         if (question.ElementAt(i).UserAn == question.ElementAt(i).CorrectAn)
                                         {
                                             <td>@Qnum</td>
                                             <td><i class="fa fa-circle-o fa-lg"></i></td>
-                                            <td><i class="fa fa-check-circle text-success fa-lg check" fa-lg></i></td>
+                                            <td><i class="fa fa-check-circle text-success fa-lg check" style="margin-left:12px;"></i></td>
                                             <td><i class="fa fa-circle-o fa-lg"></i></td>
                                             <td><i class="fa fa-circle-o fa-lg"></i></td>
                                             Qnum++;
@@ -112,8 +116,8 @@
                                             if (question.ElementAt(i).CorrectAn == question.ElementAt(i).AnOne)
                                             {
                                                 <td>@Qnum</td>
-                                                <td><i class="fa fa-check-circle-o text-success fa-lg check"></i></td>
-                                                <td><i class="fa fa-times-circle-o text-danger fa-lg check"></i></td>
+                                                <td><i class="fa fa-check-circle-o text-success fa-lg check" style="margin-left:12px;"></i></td>
+                                                <td><i class="fa fa-times-circle-o text-danger fa-lg check" style="margin-left:12px;"></i></td>
                                                 <td><i class="fa fa-circle-o fa-lg"></i></td>
                                                 <td><i class="fa fa-circle-o fa-lg"></i></td>
                                             }
@@ -121,22 +125,25 @@
                                             {
                                                 <td>@Qnum</td>
                                                 <td><i class="fa fa-circle-o fa-lg"></i></td>
-                                                <td><i class="fa fa-times-circle-o text-danger fa-lg check"></i></td>
-                                                <td><i class="fa fa-check-circle-o text-success fa-lg check"></i></td>
+                                                <td><i class="fa fa-times-circle-o text-danger fa-lg check" style="margin-left:12px;"></i></td>
+                                                <td><i class="fa fa-check-circle-o text-success fa-lg check" style="margin-left:12px;"></i></td>
                                                 <td><i class="fa fa-circle-o fa-lg"></i></td>
                                             }
                                             if (question.ElementAt(i).CorrectAn == question.ElementAt(i).AnFour)
                                             {
                                                 <td>@Qnum</td>
                                                 <td><i class="fa fa-circle-o fa-lg"></i></td>
-                                                <td><i class="fa fa-times-circle-o text-danger fa-lg check"></i></td>
+                                                <td><i class="fa fa-times-circle-o text-danger fa-lg check" style="margin-left:12px;"></i></td>
                                                 <td><i class="fa fa-circle-o fa-lg"></i></td>
-                                                <td><i class="fa fa-check-circle-o text-success fa-lg check"></i></td>
+                                                <td><i class="fa fa-check-circle-o text-success fa-lg check" style="margin-left:12px;"></i></td>
                                             }
 
                                             Qnum++;
                                         }
                                     }
+
+
+
                                     if (question.ElementAt(i).UserAn == question.ElementAt(i).AnThree)
                                     {
                                         if (question.ElementAt(i).UserAn == question.ElementAt(i).CorrectAn)
@@ -144,7 +151,7 @@
                                             <td>@Qnum</td>
                                             <td><i class="fa fa-circle-o fa-lg"></i></td>
                                             <td><i class="fa fa-circle-o fa-lg"></i></td>
-                                            <td><i class="fa fa-check-circle text-success fa-lg check"></i></td>
+                                            <td><i class="fa fa-check-circle text-success fa-lg check" style="margin-left:12px;"></i></td>
                                             <td><i class="fa fa-circle-o fa-lg"></i></td>
                                             Qnum++;
                                         }
@@ -153,17 +160,17 @@
                                             if (question.ElementAt(i).CorrectAn == question.ElementAt(i).AnOne)
                                             {
                                                 <td>@Qnum</td>
-                                                <td><i class="fa fa-check-circle-o text-success fa-lg check"></i></td>
+                                                <td><i class="fa fa-check-circle-o text-success fa-lg check" style="margin-left:12px;"></i></td>
                                                 <td><i class="fa fa-circle-o fa-lg"></i></td>
-                                                <td><i class="fa fa-times-circle-o text-danger fa-lg check"></i></td>
+                                                <td><i class="fa fa-times-circle-o text-danger fa-lg check" style="margin-left:12px;"></i></td>
                                                 <td><i class="fa fa-circle-o fa-lg"></i></td>
                                             }
                                             if (question.ElementAt(i).CorrectAn == question.ElementAt(i).AnTwo)
                                             {
                                                 <td>@Qnum</td>
                                                 <td><i class="fa fa-circle-o fa-lg"></i></td>
-                                                <td><i class="fa fa-check-circle-o text-success fa-lg check"></i></td>
-                                                <td><i class="fa fa-times-circle-o text-danger fa-lg check"></i></td>
+                                                <td><i class="fa fa-check-circle-o text-success fa-lg check" style="margin-left:12px;"></i></td>
+                                                <td><i class="fa fa-times-circle-o text-danger fa-lg check" style="margin-left:12px;"></i></td>
                                                 <td><i class="fa fa-circle-o fa-lg"></i></td>
                                             }
                                             if (question.ElementAt(i).CorrectAn == question.ElementAt(i).AnFour)
@@ -171,8 +178,8 @@
                                                 <td>@Qnum</td>
                                                 <td><i class="fa fa-circle-o fa-lg"></i></td>
                                                 <td><i class="fa fa-circle-o fa-lg"></i></td>
-                                                <td><i class="fa fa-times-circle-o text-danger fa-lg check"></i></td>
-                                                <td><i class="fa fa-check-circle-o text-success fa-lg check"></i></td>
+                                                <td><i class="fa fa-times-circle-o text-danger fa-lg check" style="margin-left:12px;"></i></td>
+                                                <td><i class="fa fa-check-circle-o text-success fa-lg check" style="margin-left:12px;"></i></td>
                                             }
 
                                             Qnum++;
@@ -186,7 +193,7 @@
                                             <td><i class="fa fa-circle-o fa-lg"></i></td>
                                             <td><i class="fa fa-circle-o fa-lg"></i></td>
                                             <td><i class="fa fa-circle-o fa-lg"></i></td>
-                                            <td><i class="fa fa-check-circle text-success fa-lg check"></i></td>
+                                            <td><i class="fa fa-check-circle text-success fa-lg check" style="margin-left:12px;"></i></td>
                                             Qnum++;
                                         }
                                         else
@@ -194,26 +201,26 @@
                                             if (question.ElementAt(i).CorrectAn == question.ElementAt(i).AnOne)
                                             {
                                                 <td>@Qnum</td>
-                                                <td><i class="fa fa-check-circle-o text-success fa-lg check"></i></td>
+                                                <td><i class="fa fa-check-circle-o text-success fa-lg check" style="margin-left:12px;"></i></td>
                                                 <td><i class="fa fa-circle-o fa-lg"></i></td>
                                                 <td><i class="fa fa-circle-o fa-lg"></i></td>
-                                                <td><i class="fa fa-times-circle-o text-danger fa-lg check"></i></td>
+                                                <td><i class="fa fa-times-circle-o text-danger fa-lg check" style="margin-left:12px;"></i></td>
                                             }
                                             if (question.ElementAt(i).CorrectAn == question.ElementAt(i).AnTwo)
                                             {
                                                 <td>@Qnum</td>
                                                 <td><i class="fa fa-circle-o fa-lg"></i></td>
-                                                <td><i class="fa fa-check-circle-o text-success fa-lg check"></i></td>
+                                                <td><i class="fa fa-check-circle-o text-success fa-lg check" style="margin-left:12px;"></i></td>
                                                 <td><i class="fa fa-circle-o fa-lg"></i></td>
-                                                <td><i class="fa fa-times-circle-o text-danger fa-lg check"></i></td>
+                                                <td><i class="fa fa-times-circle-o text-danger fa-lg check" style="margin-left:12px;"></i></td>
                                             }
                                             if (question.ElementAt(i).CorrectAn == question.ElementAt(i).AnThree)
                                             {
                                                 <td>@Qnum</td>
                                                 <td><i class="fa fa-circle-o fa-lg"></i></td>
                                                 <td><i class="fa fa-circle-o fa-lg"></i></td>
-                                                <td><i class="fa fa-check-circle-o text-success fa-lg check"></i></td>
-                                                <td><i class="fa fa-times-circle-o text-danger fa-lg check"></i></td>
+                                                <td><i class="fa fa-check-circle-o text-success fa-lg check" style="margin-left:12px;"></i></td>
+                                                <td><i class="fa fa-times-circle-o text-danger fa-lg check" style="margin-left:12px;"></i></td>
                                             }
 
                                             Qnum++;
@@ -225,7 +232,7 @@
                                         if (question.ElementAt(i).CorrectAn == question.ElementAt(i).AnOne)
                                         {
                                             <td>@Qnum</td>
-                                            <td><i class="fa fa-check-circle text-success fa-lg check"></i></td>
+                                            <td><i class="fa fa-check-circle text-success fa-lg check" style="margin-left:12px;"></i></td>
                                             <td><i class="fa fa-question-circle-o fa-lg"></i></td>
                                             <td><i class="fa fa-question-circle-o fa-lg"></i></td>
                                             <td><i class="fa fa-question-circle-o fa-lg"></i></td>
@@ -234,7 +241,7 @@
                                         {
                                             <td>@Qnum</td>
                                             <td><i class="fa fa-question-circle-o fa-lg"></i></td>
-                                            <td><i class="fa fa-check-circle text-success fa-lg check"></i></td>
+                                            <td><i class="fa fa-check-circle text-success fa-lg check" style="margin-left:12px;"></i></td>
                                             <td><i class="fa fa-question-circle-o fa-lg"></i></td>
                                             <td><i class="fa fa-question-circle-o fa-lg"></i></td>
                                         }
@@ -243,7 +250,7 @@
                                             <td>@Qnum</td>
                                             <td><i class="fa fa-question-circle-o fa-lg"></i></td>
                                             <td><i class="fa fa-question-circle-o fa-lg"></i></td>
-                                            <td><i class="fa fa-check-circle text-success fa-lg check"></i></td>
+                                            <td><i class="fa fa-check-circle text-success fa-lg check" style="margin-left:12px;"></i></td>
                                             <td><i class="fa fa-question-circle-o fa-lg"></i></td>
                                         }
                                         if (question.ElementAt(i).CorrectAn == question.ElementAt(i).AnFour)
@@ -252,7 +259,7 @@
                                             <td><i class="fa fa-question-circle-o fa-lg"></i></td>
                                             <td><i class="fa fa-question-circle-o fa-lg"></i></td>
                                             <td><i class="fa fa-question-circle-o fa-lg"></i></td>
-                                            <td><i class="fa fa-check-circle text-success fa-lg check"></i></td>
+                                            <td><i class="fa fa-check-circle text-success fa-lg check" style="margin-left:12px;"></i></td>
                                         }
 
                                         Qnum++;
@@ -346,6 +353,7 @@
     </script>
 </body>
 </html>
+
 
 
 
