--- a/Azmoonak/Views/Exam/DemoQuestionPartial.cshtml
+++ b/Azmoonak/Views/Exam/DemoQuestionPartial.cshtml
@@ -1,6 +1,6 @@
 ﻿@model IEnumerable<Azmoonak.Database.Models.Question>
 
-<form asp-controller="exam" asp-action="EndExam" class="q-right" dir="rtl">
+<form asp-controller="exam" asp-action="EndDemoExam" class="q-right" dir="rtl">
     @{
         int n = 1;
         for (int i = 0; i < Model.Count(); i++)
