--- a/Azmoonak/Views/Exam/ExamDemoGroupsPartial.cshtml
+++ b/Azmoonak/Views/Exam/ExamDemoGroupsPartial.cshtml
@@ -1,6 +1,6 @@
 ﻿@model IEnumerable<Azmoonak.Database.Models.Group>
 
-<h4 class="text-center mt-3">لیست تمامی آزمون ها</h4>
+<h4 class="text-center mt-3">لیست دمو تمامی آزمون ها</h4>
 <div class="container-fluid my-5">
     <div class="row gap-5  justify-content-center">
         @foreach (var item in Model)
@@ -9,16 +9,14 @@
                 <h2 class="mt-5 text-white text-uppercase">@item.GroupName</h2>
                 <div class="hoverd">
                     <h6>برای شروع کلیک  کنید</h6>
-                    <li class="h1 btn btn-automat bg-secondary mt-3"><a asp-area="" asp-controller="exam" asp-action="details" asp-route-id="@item.Id" data-bs-toggle="modal" data-bs-target="#exampleModal" class="text-decoration-none text-white" onclick="Details('@(item.Id)')"> @item.GroupName</a></li>
+                    <li class="h1 btn btn-automat bg-secondary mt-3">
+                        <a asp-area="" asp-controller="exam" asp-action="demoexamdetails" asp-route-id="@item.Id" data-bs-toggle="modal" data-bs-target="#exampleModal" class="text-decoration-none text-white" onclick="Details('@(item.Id)')"> @item.GroupName</a>
+                    </li>
                 </div>
             </div>
         }
     </div>
 </div>
-
-
-
-
 
 
 <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
@@ -44,7 +42,7 @@
     })
     function Details(groupid) {
         $.ajax({
-            url: '/exam/details',
+            url: '/exam/demoexamdetails',
             type: 'get',
             data: {/*controller parameter*/  id: groupid /*send parameter*/ },
             success: (result) => {
