--- a/Azmoonak/Views/Question/QuestionPartial.cshtml
+++ b/Azmoonak/Views/Question/QuestionPartial.cshtml
@@ -3,28 +3,31 @@
 
 <main>
 
-    @foreach (var item in Model)
-    {
-        <!--related Question -->
-        <div class="bg-q">
-            <form class="q-right" dir="rtl">
+    @{
+        if (Model.Count()>0)
+        {
+            foreach (var item in Model)
+            {
+                <!--related Question -->
+                <div class="bg-q">
+                    <form class="q-right" dir="rtl">
 
-                @*              <h2>@item.QText</h2>
-            <span class="q-form"><input type="radio" name="fav_language">الف)@item.AnOne</span><hr>
-            <span class="q-form"><input type="radio" name="fav_language">ب)@item.AnTwo</span><hr>
-            <span class="q-form"><input type="radio" name="fav_language">ج)@item.AnThree</span><hr>
-            <span class="q-form"><input type="radio" name="fav_language">د)@item.AnFour</span><hr>
-            <span class="q-form"><input type="radio" name="fav_language">جواب درست)@item.CorrectAn</span><hr>*@
+                        <h2 class="q-question">@item.QText</h2>
+                        <span class="q-form"><span class="q-alpha">الف)</span> @item.AnOne</span><hr>
+                        <span class="q-form"><span class="q-alpha">ب)</span> @item.AnTwo</span><hr>
+                        <span class="q-form"><span class="q-alpha">ج)</span> @item.AnThree</span><hr>
+                        <span class="q-form"><span class="q-alpha">د)</span> @item.AnFour</span><hr>
+                        <span class="q-form"><span class="q-alpha">جواب درست)</span>  @item.CorrectAn</span><hr>
 
-
-                <h2 class="q-question">@item.QText</h2>
-                <span class="q-form"><span class="q-alpha">الف)</span> @item.AnOne</span><hr>
-                <span class="q-form"><span class="q-alpha">ب)</span> @item.AnTwo</span><hr>
-                <span class="q-form"><span class="q-alpha">ج)</span> @item.AnThree</span><hr>
-                <span class="q-form"><span class="q-alpha">د)</span> @item.AnFour</span><hr>
-                <span class="q-form"><span class="q-alpha">جواب درست)</span>  @item.CorrectAn</span><hr>
-
-            </form>
-        </div>
+                    </form>
+                </div>
+            }
+        }
+        else
+        {
+            <h1>فعلا نمونه سوالی برای این گروه وجود ندارد</h1>
+        }
     }
+
+   
 </main>
